main.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html{
    position:relative; 
  min-height: 100%;
}

body{
    font-family: 'Raleway', sans-serif;
    font-weight: 00;
    font-size: 1.5rem;
    
}

.header{
    display: flex;
    justify-content: center;
    background-color: rgba(255,255,255,0.8);
    box-shadow: 3px 2px 1px 2px rgba(0, 0, 0, .1);
    height: 10vh;   
    z-index: 4; 
}
.header h1{
    color: black;
    display: flex;
    justify-content: center;
    height: 8vh;   
    z-index: 1; 
}

.scoreboard{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
    margin-left: 2rem;
    margin-top: 1rem;
    font-weight: 700;
}



/* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
    z-index: 4;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #888;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #dd9b22;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }


  .score-chart{
    width: auto;
    margin: auto;
    padding-top: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.chart-btn-container{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    margin-left: 80%;
    margin-right: 20%;
   
}

#chart-toggle-label{
    font-size: 1rem;
    margin-bottom: .5rem;
}

#chart-toggle{
    padding: .5rem;
    border-radius: 1rem;
    z-index: 4;
}
.chart-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 2;
}

.hidden{
    display: none !important;
}
.show{
    display: flex;
}


#message-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: .3rem;
    padding-top: 15vh;
    padding-bottom: 1rem;
    z-index: 1;
}

.form-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 4;
    padding-bottom: 1rem;
}

.form-input{
    width: 50%;
    max-width: 10rem;
    height: 2rem;
    padding: .5rem;
    border-radius: 1rem;
    z-index: 1;
}
.form-input:focus{
    width: 55%;
    height: 2rem;
    border-radius: 1rem;
    z-index: 1;
    outline:black;
    background-color: white;
}

.form-container .btn{
    padding: .5rem;
    margin: .2rem;
    border-radius: 1rem;
    z-index: 1;
}

#reset{
    padding: .5rem;
    margin: .2rem;
    border-radius: 1rem;
    z-index: 1;
}

.btn-container{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-right: 0;
   
}

#overlay {
    position: fixed; 
    display: block; 
    width: 100%; 
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: url('./img/bball-bg-texture.png');
    opacity: 0.1;
    background-repeat: no-repeat;
    z-index: 0; 
  }

.logos a{
    z-index: 1;
}

.github{
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: flex-start;
    margin: .3rem;
    padding-top: .5rem;
   
}

.github img{
    max-width: 2rem;
    margin-left: 2rem;
    
}


.footer > div{
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height:50px;
    background-color: rgba(255,255,255,0.8);
    box-shadow: 3px 2px 1px 2px rgba(0, 0, 0, .1);
    margin-top: .5rem;
}
.footer a{
    display: flex;
    justify-content: center;
    padding-top: 1rem;
   font-family: "Roboto";
   font-size: 1rem;
   text-decoration: none;
   color: black;
   z-index: 1;
}

